fixes bug 161417 - recent netwerk checkin upped warning count by 4 r=dougt sr=alecf